--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "rss-parser": "^3.12.0",
     "xml2js": "^0.4.23"
