--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
-    "rss-parser": "^3.12.0",
-    "xml2js": "^0.4.23"
+    "rss-parser": "^3.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "test"
+    "start": "node server.js",
+    "test": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
