--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.3",
     "rss-parser": "^3.12.0"
